--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -218,6 +218,7 @@
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-plane fa-stack-1x "></i></span>AIRPORT REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/airport_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Airport Registration</a></li>
+                  <li><a href="/airport_list_incomplete"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card-o fa-stack-1x"></i></span>Incomplete Registrations</a></li>
                   <li><a href="/airport_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Airport Cases List</a></li>
                   <li><a href="/airport_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Airport Follow Up</a></li>
                   <li><a href="/airport_symptomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
