airport online user submit

--- a/veoc/templates/veoc/airport_register.html
+++ b/veoc/templates/veoc/airport_register.html
@@ -12,7 +12,7 @@
         <div class="padding-md">
           <div class="row">
             <div class="col-md-12">
-                  <form class="calls_form" method="POST" action="{% url 'veoc:airport_register' %}" >
+                  <form class="calls_form" method="POST" action="{% url 'veoc:airline_registration' %}" >
                     {% csrf_token %}
                     <div class="form-group col-md-12">
                     <span style="color:red">
