--- a/veoc/templates/veoc/login.html
+++ b/veoc/templates/veoc/login.html
@@ -62,7 +62,7 @@
                         <div class="p-t-20">
                             <button class="btn btn--radius btn--green" type="submit">  Login  </button>
 
-                              <button class="btn btn--radius btn--green" style="color: black" onClick="location.href='{% url 'veoc:forgot_password' %}'">Forgot Password</button>                  
+                              <button class="btn btn--radius btn--green" style="color: black" onClick="location.href='{% url 'veoc:forgot_password' %}'">Forgot Password</button>
 
                         </div>
                     </form>
@@ -74,7 +74,7 @@
                     <form method="POST" action="#">
                         <div class="p-t-20">
                             <button type="button" class="btn btn--radius btn--green" style="display: block; margin: 0 auto;" onClick="location.href='{% url 'veoc:public_document' %}'">View Public Documents</button>
-{#                            <button type="button" class="btn btn--radius btn--orange" style="display: block; margin: 0 auto;" onClick="location.href='{% url 'veoc:airline_reg' %}'">Airport Travellers</button>#}
+{#                            <button type="button" class="btn btn--radius btn--orange" style="display: block; margin: 0 auto;" onClick="location.href='{% url 'veoc:airline_registration' %}'">Airport Travellers</button>#}
                             <!-- <a class="btn btn--radius btn--green" href="{% url 'veoc:public_document' %}" role="button" style="float:center;margin-center:20px;">View Public Documents</a> -->
                         </div>
 
@@ -86,7 +86,7 @@
 		              <div class="card-body">
                     <form method="POST" action="#">
                         <div class="p-t-20">
-                            <button type="button" class="btn btn--radius btn--orange" style="display: block; margin: 0 auto;" onClick="location.href='{% url 'veoc:airline_reg' %}'">Airport Travellers</button>
+                            <button type="button" class="btn btn--radius btn--orange" style="display: block; margin: 0 auto;" onClick="location.href='{% url 'veoc:airline_registration' %}'">Airport Travellers</button>
                             <!-- <a class="btn btn--radius btn--green" href="{% url 'veoc:public_document' %}" role="button" style="float:center;margin-center:20px;">View Public Documents</a> -->
                         </div>
 
