--- a/veoc/templates/veoc/airline_travellers.html
+++ b/veoc/templates/veoc/airline_travellers.html
@@ -1,17 +1,27 @@
-{% extends "veoc/travellers_template.html" %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
-{% block main %}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+
+<script src="/static/js/qrcode.js" type="text/javascript"></script>
+<script src="/static/js/qrcode.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js" integrity="sha256-c3RzsUWg+y2XljunEQS0LqWdQ04X1D3j22fd/8JCAKw=" crossorigin="anonymous"></script>
+
+
 
 <div class="container">
-
+<br>
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-12">
         <div class="card">
         <header class="card-header">
-            <h4 class="card-title mt-2">Register</h4>
+            <h4 class="card-title mt-2" align="center">Submit Details for COVID-19 Clearance</h4>
         </header>
         <article class="card-body">
-        <form class="airline_travellers_form" method="POST" action="{% url 'veoc:airport_register' %}" >
+        <form class="airline_travellers_form" method="POST"  action="{% url 'veoc:airline_registration' %}">
         {% csrf_token %}
             <div class="form-row">
                 <div class="col form-group">
@@ -22,12 +32,12 @@
                     <label>Middle name</label>
                     <input class="form-control" type="text" id="middle_name" name="middle_name" placeholder="Middle Name"/>
                 </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
                 <div class="col form-group">
                     <label>Last name*</label>
                     <input class="form-control" type="text" id="last_name" name="last_name" placeholder="Last Name" required/>
                 </div> <!-- form-group end.// -->
+                </div>
+                <div class="form-row">
                 <div class="col form-group">
                     <label for="sex">Gender : *</label>
                     <select class="form-control" id="sex" name="sex">
@@ -35,18 +45,12 @@
                          <option value="Female">Female</option>
                      </select>
                 </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
                 <div class="col form-group">
                     <label for="dob">Date of Birth : *</label>
                     <input class="form-control" type="date" value="{{ day }}" id="dob" max='2000-13-13' name="dob">
                 </div> <!-- form-group end.// -->
-                <div class="col form-group">
-                    <label for="date_of_arrival">Date of Arrival in Kenya: *</label>
-                    <input class="form-control" type="date" value="{{ day }}" id="date_of_arrival" max='2000-13-13' name="date_of_arrival">
-                </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
+                </div> <!-- form-row end.// -->
+                <div class="form-row">
                 <div class="col form-group">
                     <label for="nationality">Nationality : *</label>
                      <select class="form-control" name="nationality" id="nationality" required>
@@ -65,18 +69,32 @@
                           {% endfor %}
                       </select>
                 </div> <!-- form-group end.// -->
+                <div class="col form-group">
+                    <label for="date_of_arrival">Date of Arrival in Kenya: *</label>
+                    <input class="form-control" type="date" value="{{ day }}" id="date_of_arrival" max='2000-13-13' name="date_of_arrival">
+                </div> <!-- form-group end.// -->
             </div> <!-- form-row end.// -->
             <div class="form-row">
                 <div class="col form-group">
                     <label for="passport_number">ID / Passport Number : *</label>
                     <input class="form-control" type="text" id="passport_number" name="passport_number" placeholder="Passport Number" required/>
                 </div> <!-- form-group end.// -->
+                <div class=" col form-group">
+                    <label for="phone_number">Phone Number : *</label>
+                    <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" placeholder="Country Code, Start With +254, e.g +254720000000" required/>
+                    <small class="form-text text-muted">This is only for notification purposes.</small>
+                </div> <!-- form-group end.// -->
+                <div class="col form-group">
+                    <label>Email address</label>
+                    <input class="form-control" type="email" id="email_address" name="email_address" placeholder="Email Address"/>
+                    <small class="form-text text-muted">Your unique QR code will be sent here</small>
+                </div> <!-- form-group end.// -->
+              </div> <!-- form-row end.// -->
+                <div class="form-row">
                 <div class="col form-group">
                     <label for="airline">Airline :* </label>
                     <input class="form-control" type="text" id="airline" name="airline" size="45" placeholder="Airline" required/>
                 </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
                 <div class="col form-group">
                     <label for="flight_number">Flight Number :* </label>
                     <input class="form-control" type="text" id="flight_number" name="flight_number" size="45" placeholder="Flight Number" required/>
@@ -100,8 +118,6 @@
                           {% endfor %}
                       </select>
                 </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
                 <div class="col form-group">
                     <label for="fever">Fever (37.5°C or higher):* </label>
                      <select class="form-control" id="fever" name="fever" required>
@@ -110,6 +126,8 @@
                          <option value="f">No</option>
                      </select>
                 </div> <!-- form-group end.// -->
+                </div>
+                <div class="form-row">
                 <div class="col form-group">
                     <label for="feverish">Feverish :* </label>
                     <select class="form-control" id="feverish" name="feverish" required>
@@ -118,8 +136,6 @@
                         <option value="f">No</option>
                     </select>
                 </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
                 <div class="col form-group">
                     <label for="chills">Chills :* </label>
                     <select class="form-control" id="chills" name="chills" required>
@@ -128,6 +144,8 @@
                         <option value="f">No</option>
                     </select>
                 </div> <!-- form-group end.// -->
+              </div>
+              <div class="form-row">
                 <div class="col form-group">
                     <label for="cough">Cough :* </label>
                     <select class="form-control" id="cough" name="cough" required>
@@ -136,8 +154,6 @@
                         <option value="f">No</option>
                   </select>
                 </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
                 <div class="col form-group">
                     <label for="breathing_difficulty">Difficulty in breathing :* </label>
                     <select class="form-control" id="breathing_difficulty" name="breathing_difficulty" required>
@@ -146,12 +162,8 @@
                         <option value="f">No</option>
                   </select>
                 </div> <!-- form-group end.// -->
-                <div class="col form-group">
-                    <label for="postal_address">Postal Address : </label>
-                    <input class="form-control" type="text" id="postal_address" name="postal_address" placeholder="Postal Address"/>
-                </div> <!-- form-group end.// -->
-            </div> <!-- form-row end.// -->
-            <div class="form-row">
+                </div>
+                <div class="form-row">
                 <div class="col form-group">
                     <label for="callername">Name of Contact Person(Next of kin): </label>
                     <input class="form-control" type="text" id="nok" name="nok" placeholder="Next of Kin Name"/>
@@ -161,6 +173,7 @@
                     <input class="form-control" type="number" id="nok_phone_num" name="nok_phone_num" minlength="10" placeholder="Next of Kin Phone Number"/>
                 </div> <!-- form-group end.// -->
             </div> <!-- form-row end.// -->
+
             <div class="form-row">
                 <div class="col form-group">
                     <label for="residence">Village/House Number/Hotel : </label>
@@ -170,24 +183,21 @@
                     <label for="estate">Subloaction/Estate : </label>
                     <input class="form-control" type="text" id="estate" name="estate" placeholder="Subloaction or Estate"/>
                 </div> <!-- form-group end.// -->
+                <div class="col form-group">
+                    <label for="postal_address">Postal Address : </label>
+                    <input class="form-control" type="text" id="postal_address" name="postal_address" placeholder="Postal Address"/>
+                </div> <!-- form-group end.// -->
             </div> <!-- form-row end.// -->
-            <div class="form-group">
-                <label for="phone_number">Phone Number : *</label>
-                <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" placeholder="Country Code, Start With +254, e.g +254720000000" required/>
-                <small class="form-text text-muted">We'll never share your phone number with anyone else.</small>
-            </div> <!-- form-group end.// -->
-            <div class="form-group">
-                <label>Email address</label>
-                <input class="form-control" type="email" id="email_address" name="email_address" placeholder="Email Address"/>
-                <small class="form-text text-muted">Enter correct email for generation of QR code</small>
-            </div> <!-- form-group end.// -->
+            <div class="form-row">
             <div class="form-group"  style="display: none;">
                 <label for="measured_temperature">Measured Temperature :* </label>
                 <input class="form-control" type=number' id="measured_temperature" name="measured_temperature" value="0.0">
               </div>
+                </div>
             <div class="form-group">
-                <button type="submit" id="save_button" class="btn btn-primary btn-block"> Register  </button>
+                <button type="submit" id="save_button" class="btn btn-primary btn-block"> Submit  </button>
             </div> <!-- form-group// -->
+
         </form>
         </article> <!-- card-body end .// -->
         </div> <!-- card.// -->
@@ -297,9 +307,6 @@
         </div>
     </div>
 
-{% endblock %}
-
-{% block script %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
@@ -386,4 +393,3 @@
     }
 
     </script>
-{% endblock %}
