--- a/veoc/templates/veoc/truck_quarantine_list.html
+++ b/veoc/templates/veoc/truck_quarantine_list.html
@@ -31,13 +31,10 @@
             <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
         </div>
         <div class="panel-body" align="left">
-            <form class="form-inline" method="post" action="{% url 'veoc:truck_quarantine_list' %}">{% csrf_token %}
-                <div class="form-group">
+                <div>
                     <label for="id_number">Search Passport/ID :</label>
                     <input class="form-control id_number" type="text" id="id_number" name="id_number" size="45" placeholder="ID Number" required/>
                 </div>
-                <button type="submit" class="btn btn-primary">Search</button>
-            </form>
             <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
         </div>
         {#              <div class="panel-body" align="left">#}
@@ -87,7 +84,7 @@
                                     <th data-data="patient_contacts.created_by">Registered by</th>
                                     {#                            <th>Company Details</th>#}
                                     {#                            <th>Acommodation</th>#}
-                                    <th data-data="patient_contacts.truck_info">">Map View</th>
+                                    <th data-data="patient_contacts.truck_info">Map View</th>
                                     <th data-data="patient_contacts.truck_prof">View Profile</th>
                                     <!-- <th>Edit</th> -->
                                 </tr>
@@ -437,6 +434,9 @@
 {% endblock %}
 
 {% block script %}
+  <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+  <script src="//cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script> -->
     <script>
@@ -449,45 +449,38 @@
                     'copy', 'csv', 'excel', 'pdf', 'print'
                 ]
             });
-            $(document).ready(function(){
-            });
 
-                $('#quarantine_report tbody').on( 'click', 'tr',function () {
-                    console.log( a.row( this ).data().patient_contacts );
-                    console.log($("#map_view").attr('data-id'));
-                    var d = document.getElementById("map_view");
-                    d.setAttribute('data-id' , a.row( this ).data().patient_contacts.id);
-                    d.setAttribute('data-last_contact', a.row( this ).data().patient_contacts.date_of_contact);
-                    d.setAttribute('data-names', a.row( this ).data().patient_contacts.first_name+" " +a.row( this ).data().patient_contacts.last_name);
-                    d.setAttribute('data-phone_number', a.row( this ).data().patient_contacts.phone_number);
-                    var prof = document.getElementById("truckerprof");
-                    prof.setAttribute('href', "/truck_driver_profile/"+a.row( this ).data().patient_contacts.id);
-                } );
-
-            // Setup - add a text input to each footer cell
-            $('#quarantine_report thead td').each(function () {
-                var title = $(this).text();
-                $(this).html('<input type="text" placeholder="Search ' + title + '" />');
-            });
+            {#// Setup - add a text input to each footer cell#}
+            {#$('#quarantine_report thead td').each(function () {#}
+            {#    var title = $(this).text();#}
+            {#    $(this).html('<input type="text" placeholder="Search ' + title + '" />');#}
+            {#);#}
 
             // DataTable
-            var table = $('#quarantine_report').DataTable();
 
             // Apply the search
-            table.columns().every(function () {
-                var that = this;
-
-                $('input', this.header()).on('keyup change', function () {
-                    if (that.search() !== this.value) {
-                        that
-                            .search(this.value)
-                            .draw();
-                    }
-                });
-            });
+            {#table.columns().every(function () {#}
+            {#    var that = this;#}
+            {##}
+            {#    $('input', this.header()).on('keyup change', function () {#}
+            {#        if (that.search() !== this.value) {#}
+            {#            that#}
+            {#                .search(this.value)#}
+            {#                .draw();#}
+            {#        }#}
+            {#    });#}
+            {#);#}
+            var table = $('#quarantine_report').DataTable();
+            $('#id_number').on( 'keyup', function () {
+                table
+                    .columns( 5 )
+                    .search( this.value )
+                    .draw();
+            } );
 
         });
 
+        // #column3_search is a <input type="text"> element
         $(document).on("click", '.map_view', function (e) {
             var id = $(this).data('id');
             var names = $(this).data('names');
