--- a/veoc/templates/veoc/airline_travellers.html
+++ b/veoc/templates/veoc/airline_travellers.html
@@ -214,7 +214,7 @@
 <article class="bg-secondary mb-3">
 <div class="card-body text-center">
 
-    <div class="tab-pane fade" id="qr_code_generator" style="display: none;">
+    <div class="tab-pane fade" id="qr_code_generator">
         <hr>
         <div class="panel panel-default table-responsive">
             <div class="panel-heading">
@@ -246,12 +246,10 @@
                         <td colspan="2">
                             <div>
                                 <div>
-                                    <p class="title" style="color:#1034A6; text-align: center">
-
-                                      <img src="/static/images/emblem.png" style="width:40%; max-width:100px;">
-                                      <br>REPUBLIC OF KENYA <br>
-                                  <h3 style="text-align: center">MINISTRY OF HEALTH</h3>
-                                    </p>
+                                    <header class="card-header" align="center">
+                                        <img src="/static/images/emblem.png" style="width:40%; max-width:100px;">
+                                        <h4>MINISTRY OF HEALTH<br>NOVEL CORONAVIRUS QR CODE</h4>
+                                    </header>
 
                                 </div>
                             </div>
@@ -327,9 +325,6 @@
             var endPoint = thisForm.attr("action") || window.location.href;
             var method = thisForm.attr("method");
             var formData = thisForm.serialize();
-
-            uuid = '87655d1fb9994232ba6bdd1e7c523f65'
-            generate_QRCode(uuid);
 
             Swal.fire({
                 title: "Please wait,Saving Details!",
