--- a/veoc/templates/veoc/airline_travellers.html
+++ b/veoc/templates/veoc/airline_travellers.html
@@ -223,25 +223,6 @@
             <hr>
             <div class="invoice-box" id="dvQRCode" style="background-color:white">
                 <table id="dvTable" style="background-color:white">
-                    <tr class="heading">
-                        <div colspan="2">
-                            <div>
-                                <div style="overflow: hidden;">
-                                    <p style="float: left;">CAP 242</p>
-                                    <p style="float: right;">Public Health Revised  2012</p>
-                                </div>
-                            </div>
-                        </div>
-                    </tr>
-                    <div class="information">
-                        <div colspan="2">
-                            <div>
-                                <div style="overflow: hidden;">
-                                    <p style="float: right;">Certificate No. <br><i style="color:#1034A6;"></i> MOH/cap 242/2020</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="top">
                         <td colspan="2">
                             <div>
@@ -255,19 +236,8 @@
                             </div>
                         </td>
                     </div>
-                    <div class="information">
-                        <div colspan="2">
-                            <div>
-                                <div>
-                                    <h4 >
-                                        <br><h2 style="text-align: center"s>SELF REGISTRATION QR CODE</h2>
-                                    </h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <tr class="information">
-                        <td colspan="2">
+                    <tr class="information" align="center">
+                        <td colspan="2" align="center">
                             <table>
                                 <tr>
                                     <td>
@@ -352,8 +322,7 @@
                         travellersForm[0].reset();
                         {# get inserted datas uuid got generation of QRcode pass it to the function generating the code#}
                         console.log(data);
-                        uuid = '87655d1fb9994232ba6bdd1e7c523f65'
-                        generate_QRCode(uuid);
+                        generate_QRCode(data);
                     }
                 },
                 error:function(er){
@@ -377,8 +346,8 @@
         console.log("Inside generate_QRCode");
         console.log(uuid);
         var qrcode = new QRCode(document.getElementById('qr-td'),{
-            width:500,
-            height:500
+            width:300,
+            height:300
         });
 
         qrcode.makeCode(uuid)
