Arport complete list and airport module  menu for POE

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -219,7 +219,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/airport_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Airport Registration</a></li>
                   <li><a href="/airport_list_incomplete"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card-o fa-stack-1x"></i></span>Incomplete Registrations</a></li>
-                  <li><a href="/airport_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Airport Cases List</a></li>
+                  <li><a href="/airport_list_complete"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Airport Cases List</a></li>
                   <li><a href="/airport_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Airport Follow Up</a></li>
                   <li><a href="/airport_symptomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_airport"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Cases</a></li>
@@ -464,6 +464,17 @@
                   <li><a href="/truck_symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/truck_ongoing_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-tasks fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
                   <li><a href="/truck_complete_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-window-close fa-stack-1x "></i></span>Completed Quarantine</a></li>
+              </ul>
+          </li>
+          <li>
+              <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-plane fa-stack-1x "></i></span>AIRPORT REPORTS</a>
+              <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/airport_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Airport Registration</a></li>
+                  <li><a href="/airport_list_incomplete"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card-o fa-stack-1x"></i></span>Incomplete Registrations</a></li>
+                  <li><a href="/airport_list_complete"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Airport Cases List</a></li>
+                  <li><a href="/airport_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Airport Follow Up</a></li>
+                  <li><a href="/airport_symptomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
+                  <li><a href="/complete_airport"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Cases</a></li>
               </ul>
           </li>
 		  <li>
