added covid pcr to changes

--- a/veoc/templates/veoc/airline_travellers.html
+++ b/veoc/templates/veoc/airline_travellers.html
@@ -140,6 +140,14 @@
                     </select>
                 </div> <!-- form-group end.// -->
                 <div class="col form-group">
+                    <label for="covid_pcr"> Negative Covid19 PCR :* </label>
+                    <select class="form-control" id="covid_pcr" name="covid_pcr">
+                        <option value="" disabled selected>Select Option</option>
+                        <option value="t">Yes</option>
+                        <option value="f">No</option>
+                    </select>
+                </div> <!-- form-group end.// -->
+                <div class="col form-group">
                     <label for="chills">Chills :* </label>
                     <select class="form-control" id="chills" name="chills" required>
                         <option value="" disabled selected>Select Option</option>
