--- a/veoc/templates/veoc/truck_driver_profile.html
+++ b/veoc/templates/veoc/truck_driver_profile.html
@@ -659,7 +659,7 @@
                                                         exact place of work){% for l in patient_details %}
                                                                     ____<i><b>{{ l.company_name }}</b></i>________{% endfor %} has been
                                                         tested and found negative for COVID-19 following laboratory tests conducted
-                                                        on ___<i><b>{{ lab.date_tested|date:'d-m-Y' }}</b></i>____ at the ____<i><b>{{ lab.lab }}</b></i>___
+                                                        on ___<i><b>{{ lab.date_tested }}</b></i>____ at the ____<i><b>{{ lab.lab }}</b></i>___
                                                         (indicate laboratory facility)
                                                         This attestation is issued in accordance with Public Health Act Cap 242 Laws of Kenya
                                                         and the applicable Rules and Regulations for Prevention and Suppression of Infectious
